# crewai_temp

./: README.md  pyproject.toml
src/financial_analyst_crew/: crew.py  main.py
src/project_name/: crew.py
src/project_name/config/: agents.yaml  tasks.yaml
