[tool.poetry]
name = "financial_analyst_crew"
version = "0.1.0"
description = "optimize-response-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
langchain-core = "^0.2.2"
langchain-groq = "^0.1.6"
python-dotenv = "^1.0.1"
crewai = "^0.41.1"
pyyaml = "^6.0.1"



[tool.poetry.scripts]
financial_analyst_crew = "financial_analyst_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

